# fintopics

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  environment.yml  fintopics.toml  pyproject.toml  setup.cfg
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
fintopics/: __init__.py  cli.py  log.py
fintopics/data/: __init__.py  bow_matrix.py  prepare_labels.py
fintopics/data/pipeline/: __init__.py  corpus.py  dictionary.py  document.py  lemma.py  matrix.py  read.py  regex.py  word.py
tests/data/pipeline/: test_pipeline.py  test_read.py  test_regex.py
tests/fixtures/: exhibit.txt  header.txt
