[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "fintopics"
version = "0.1.0"
description = "Deep Learning for Financial Topic Modeling"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/Ark-Paradigm/fintopics"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
fintopics = 'fintopics.cli:main'

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.4.0"
numpy = "^1.18"
nltk = "^3.4.5"
gensim = {url = "https://files.pythonhosted.org/packages/73/f2/e9af000df6419bf1a63ffed3e6033a1b1d8fcf2f971fcdac15296619aff8/gensim-3.8.1.tar.gz"}
tqdm = "^4.45.0"
toml = "^0.10.0"
click = "^7.1.1"
tables = "^3.6.1"
scikit-learn = "^0.22.2"

[tool.poetry.dev-dependencies]
mypy = "^0.750"

wemake-python-styleguide = "^0.14"
flake8-pytest = "^1.3"
flake8-pytest-style = "^0.1.3"
nitpick = "^0.21.3"

safety = "^1.8"

pytest = "^5.3"
pytest-cov = "^2.7"
pytest-randomly = "^3.1"

sphinx = "^2.2"
sphinx-autodoc-typehints = "<1.11"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.5"
pytest-asyncio = "^0.10.0"
